Wed May 20 13:47:50 GMT 2015  Olly Betts <olly@survex.com>

	* net/serialise.cc: Don't use encode_length() on a bool - it's
	  overkill, and leads to a warning from GCC 5.1 (due to the
	  comparison (bool_value < 255) from the template expansion
	  always being true).

Wed May 20 01:49:18 GMT 2015  Olly Betts <olly@survex.com>

	* api/matchspy.cc: Fix comparison function not to return true for two
	  equal elements, which fixes matchspy4 test failure with clang and
	  libc++.

Wed May 20 00:20:56 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Disable "<FUNCTION> is expected to return a value"
	  warning from Sun's C++ compiler, as it fires even for functions we
	  end in a "throw" statement.  Genuine instances will be caught by
	  compilers with superior warning machinery.

Mon May 18 04:18:37 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Arrange to pass command line option so that xlC
	  actually fails to compile the test code for typeid() when RTTI isn't
	  enabled.

Sun May 17 11:35:36 GMT 2015  Olly Betts <olly@survex.com>

	* backends/glass/glass_version.cc: When reporting an error that the
	  glass format version doesn't match, don't append an uninitialised
	  char[] buffer to the error string (code accidentally left behind
	  by the previous change in this area).

Sat May 16 12:08:17 GMT 2015  Olly Betts <olly@survex.com>

	* common/socket_utils.cc: Fix casts on the 4th argument of
	  setsockopt() so they compile on platforms which expect
	  char * or const char * there.

Fri May 15 13:24:55 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Enhance the probe for whether the test harness can use
	  RTTI so that it works for xlC (which defaults to not generating
	  RTTI).

Fri May 15 12:28:32 GMT 2015  Olly Betts <olly@survex.com>

	* common/debuglog.h: Remove commented out STATIC_ASSERT() which
	  is conceptually flawed.

Fri May 15 12:27:45 GMT 2015  Olly Betts <olly@survex.com>
